# hover-train

./: .gitignore  Cargo.toml  Dockerfile  README.md
client/: Cargo.toml  Trunk.toml  index.html
client/src/: main.rs
scripts/: build-browser.sh  dev-browser.sh  dev.sh
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
